[project]
name = "langchain-tutorial"
version = "0.1.0"
description = "LangChain + Ollama setup using uv"
readme = "README.md"

dependencies = [
    "langchain",
    "langgraph",
    "langchain-ollama",
    "python-dotenv>=1.2.1",
    "opencv-python",
    "open-clip-torch",
    "torch",
    "torchvision",
    "langchain-huggingface>=1.2.1",
    "huggingface-hub>=1.9.0",
    "transformers>=5.5.0",
    "streamlit>=1.56.0",
    "langgraph-checkpoint-sqlite>=3.0.3",
]

